deploy/okd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPLACE_APP_NAME
  labels:
    app: REPLACE_APP_NAME
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: REPLACE_APP_NAME
